# abi-codegen

./: .gitignore  Cargo.toml  abi.json
abi/: Cargo.toml
abi/src/: lib.rs  models.rs  quote_traits.rs  trait_impl_gen.rs
src/: contract.rs  existing_contract.rs  lib.rs  main.rs
src/contracts/: mod.rs
