[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[lib]
name = "abi"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = {version = "2.0", features = ["visit"]}
quote = "1.0"