[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[lib]
name = "abi"
path = "src/lib.rs"
proc-macro = true


[dependencies]
everscale-types = {git = "https://github.com/broxus/everscale-types", features = ["abi", "models"]}
case = "1.0.0"
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = {version = "2.0", features = ["visit", "parsing"]}